--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --config=jest.config.json --coverage",
     "start": "webpack-dev-server",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "build-test": "concurrently --kill-others \"node server.js\" \"npx cypress open\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^3.5.1",
     "node-static": "^0.7.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -32,13 +34,20 @@
     "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.1.0",
     "css-loader": "^0.28.11",
+    "cypress": "^2.1.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
+    "jest-cli": "^22.4.3",
+    "jest-html-reporter": "^2.3.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.4",
     "precss": "^3.1.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.3.2",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
