--- a/jest.config.json
+++ b/jest.config.json
@@ -21,5 +21,6 @@
       "statements": -10
     }
   },
-  "testResultsProcessor": "./node_modules/jest-html-reporter"
+  "testResultsProcessor": "./node_modules/jest-html-reporter",
+  "setupFiles": ["jest-localstorage-mock"]
 }
