--- a/package.json
+++ b/package.json
@@ -40,16 +40,19 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "fetch-mock": "^6.4.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "jest-cli": "^22.4.3",
     "jest-html-reporter": "^2.3.0",
+    "jest-localstorage-mock": "^2.2.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.4",
     "precss": "^3.1.2",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.3.2",
+    "redux-mock-store": "^1.5.1",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
