--- a/package.json
+++ b/package.json
@@ -5,58 +5,76 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "jest --config=jest.config.json --coverage",
-    "start": "webpack-dev-server",
-    "build": "webpack --mode production",
+    "start": "cross-env NODE_ENV=development node ./server/index.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack",
+    "server": "node ./server/",
     "build-test": "concurrently --kill-others \"node server.js\" \"npx cypress open\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "concurrently": "^3.5.1",
-    "node-static": "^0.7.10",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "cross-env": "^5.1.6",
+    "express": "^4.16.3",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-hot-loader": "^4.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.3.0",
+    "url-search-params": "^0.10.0",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
+    "autoprefixer": "^8.6.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.3",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^22.4.4",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-react-statements": "^0.7.3",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "bootstrap": "^4.1.0",
+    "bootstrap": "^4.1.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "cypress": "^2.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "fetch-mock": "^6.4.2",
+    "fetch-mock": "^6.4.3",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.4.3",
-    "jest-cli": "^22.4.3",
+    "jest": "^22.4.4",
+    "jest-cli": "^22.4.4",
     "jest-html-reporter": "^2.3.0",
     "jest-localstorage-mock": "^2.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.4",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.5",
     "precss": "^3.1.2",
+    "prop-types": "^15.6.1",
     "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "^16.3.2",
+    "react-test-renderer": "^16.4.0",
     "redux-mock-store": "^1.5.1",
-    "sass-loader": "^7.0.1",
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^7.0.2",
     "style-loader": "^0.21.0",
+    "sugarss": "^1.0.1",
     "url-loader": "^1.0.1",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "webpack": "^4.9.2",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-hot-server-middleware": "^0.5.0",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
