--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "cross-env NODE_ENV=development node ./server/index.js",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack",
     "server": "node ./server/",
-    "build-test": "concurrently --kill-others \"node server.js\" \"npx cypress open\""
+    "build-test": "concurrently --kill-others \"node server.js\" \"npx cypress open\"",
+    "lint": "eslint ./ --cache --ignore-path .gitignore --fix"
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +35,7 @@
     "autoprefixer": "^8.6.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.4",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -47,6 +49,11 @@
     "cypress": "^2.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
     "fetch-mock": "^6.4.3",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
