--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "server": "node ./server/",
     "build-test": "concurrently --kill-others \"node server.js\" \"npx cypress open\"",
     "lint": "eslint ./ --cache --ignore-path .gitignore --fix",
-    "flow": "flow"
+    "flow": "flow",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +21,7 @@
     "concurrently": "^3.5.1",
     "cross-env": "^5.1.6",
     "express": "^4.16.3",
+    "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -33,6 +36,11 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^4.0.0-alpha.9",
+    "@storybook/addon-info": "^3.4.7",
+    "@storybook/addon-links": "^4.0.0-alpha.9",
+    "@storybook/addons": "^4.0.0-alpha.9",
+    "@storybook/react": "^4.0.0-alpha.9",
     "autoprefixer": "^8.6.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -45,6 +53,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "bootstrap": "^4.1.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
