--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1",
     "url-search-params": "^0.10.0",
     "whatwg-fetch": "^2.0.4"
   },
