--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "express": "^4.16.3",
     "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
+    "jss": "^9.8.3",
+    "jss-preset-default": "^4.5.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-hot-loader": "^4.2.0",
+    "react-jss": "^8.5.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
